package app.domain.model;

import java.io.Serializable;

/**
 * Represents a parameter measured in a test
 *
 * @author renan
 */
public class TestParameter implements Serializable {
    /**
     * The tested parameter
     */
    private final Parameter testedParameter;
    
    /**
     * The result for this parameter's test
     */
    private TestParameterResult testResult;
    
    /**
     * Creates an instance of TestParameter
     * 
     * @param param The tested parameter
     */
    public TestParameter(Parameter param){
        this.testedParameter = param;
    }
    
    /**
     * Gets the tested parameter
     * 
     * @return The parameter
     */
    public Parameter getParameter(){
        return this.testedParameter;
    }
    
    /**
     * Adds the test results of this parameter
     * 
     * @param result Result of the tested parameter
     * @param metric Metric used to measure the test
     * @param refValue Reference value generated by an external API
     */
    public void addResult(String result, String metric, ReferenceValue refValue){
        this.testResult = new TestParameterResult(result, metric, refValue); 
    }

    /**
     * Gets the results of this test parameter
     *
     * @return This TestParameter's TestParameterResult
     */
    public TestParameterResult getTestResult(){
        return this.testResult;
    }

    /**
     * Generates a string with information concerning the result
     * 
     * @return the string with information
     */
    @Override
    public String toString(){
        return String.format("Parameter: %s\n"
                           + "Parameter Test Results:\n%s", this.testedParameter.getDescriptionP() ,this.testResult);
    }
    public String toString2(){
        return "" + this.testResult;
    }
    
    
}
