package app.domain.model;

import java.io.Serializable;

/**
 * Represents the result of a parameter test
 *
 * @author renan
 */
public class TestParameterResult implements Serializable {
    /**
     * Result of the tested parameter
     */
    private final String value;
    
    /**
     * Metric used to measure the test
     */
    private final String metric;
    
    /**
     * Reference value generated by an external API
     */
    private final ReferenceValue refValue;
    
    
    
    /**
     * Creates a parameter test result
     * 
     * @param result Result of the tested parameter
     * @param metric Metric used to measure the test
     * @param refValue Reference value generated by an external API
     */
    public TestParameterResult(String result, String metric, ReferenceValue refValue){
        this.value=result;
        this.metric=metric;
        this.refValue=refValue;
    }

    /**
     * Gets the result of this test
     *
     * @return this TestParameter's result
     */
    public String getResult(){
        return this.value;
    }

    /**
     * Gets the reference values of this test
     *
     * @return this TestParameter's reference values
     */
    public ReferenceValue getRefValue(){
        return this.refValue;
    }
    
    /**
     * Creates a string with information concerning the result
     * 
     * @return The string
     */
    @Override
    public String toString(){
        return String.format("Result: %s\n"
                           + "Metric: %s\n"
                           + "Reference Value: %s", this.value, this.metric, this.refValue);
    }
}